🐛 FIX: fix teacher layout css center align

--- a/styles/layouts/fiive/_teacher.scss
+++ b/styles/layouts/fiive/_teacher.scss
@@ -141,6 +141,7 @@
 
       div {
         display: flex;
+        align-items: center;
         flex-direction: column;
         width: 75px;
         padding: 10px;
